--- a/網頁/AttackPage/AtackPagePart4.m.css
+++ b/網頁/AttackPage/AtackPagePart4.m.css
@@ -211,12 +211,13 @@
 .SpeciesDiversityContent{
 	position: absolute;
 	z-index: -2;
-	margin-top: -19%;
+	margin-top: -20%;
 	margin-left: -100%;
 	width: 100%;
 	height: 100%;
 	display: flex;
 	justify-content: center;
+	border: 2px solid red;
 }
 .SpeciesDiversityContent.open{
 	-webkit-transition: 2s;
