--- a/網頁/AttackPage/AtackPagePart4.m.css
+++ b/網頁/AttackPage/AtackPagePart4.m.css
@@ -2749,11 +2749,10 @@
 .DiseaseContent{
 	position: absolute;
 	z-index: -2;
-	margin-top: -132.5%;
-	margin-left: -310%;
-	width: 309%;
-	padding-bottom: 172.5%;
-
+	margin-top: -135.5%;
+	margin-left: -100%;
+	width: 100%;
+	height: 100%;
 }
 .DiseaseContent.open{
 	-webkit-transition: 2s;
@@ -2770,7 +2769,7 @@
     -ms-transition: 2s;
     -o-transition: 2s;
     transition: 0.01s,opacity 1s;
-    margin-left: -310%;
+    margin-left: -100%;
 	opacity: 0;
 }
 
@@ -2779,11 +2778,10 @@
 	z-index: 16;
 	margin-top: 0%;
 	margin-left: -100%;
-	width: 103%;
-	padding-bottom: 56%;
+	width: 100%;
+	height: 100%;
 	background-color: #163C4B;
 	opacity: 1;
-
 
 }
 .DSCBG.open{
@@ -2795,37 +2793,38 @@
 	opacity: 0.9;
 	margin-left: 0%;
 }
+
 .DSCMain{
 	position: absolute;
 	z-index: 17;
-	margin-left: 4.17%;
-	margin-top: 2.5%;
+	margin-top: 4%;
 	color: #ffffff;
-	font-size: 3rem;
+	font-size: 6rem;
 	border: solid 3px #FFFFFF;
 	border-left: 0px;
 	border-right: 0px;
 	border-radius: 1px;
 	font-weight: normal;
 	line-height: 0;
+
+
 }
 .DSCSub{
 	position: absolute;
 	z-index: 17;
-	margin-left: 32.55%;
-	margin-top: 3.13%;
+	margin-top: 14%;
 	color: #E98C24;
-	font-size: 2.2rem;
+	font-size: 3rem;
 	font-weight: normal;
+	line-height: 1.5;
 }
 .DSCpart1{
 	overflow: visible;
 	position: absolute;
 	z-index: 17;
-	margin-top: 8.5%;
-	margin-left: 10.42%;
-	width: 39.06%;
-	padding-bottom: 22.4%;
+	margin-top: 22.5%;
+	width: 58.59%;
+	padding-bottom: 33.6%;
 	background-color: #0e262f;
 	border-radius: 2.67%;
 	color: #ffffff;
@@ -2839,7 +2838,6 @@
 .DSCpart1:hover{
 	-webkit-filter:brightness(1.2);
 	background-image: url("../../Animation/WorldDamage/封面/Mosq1970.png");
-	
 
 }
 
@@ -2849,14 +2847,16 @@
     -ms-transition: 0.5s;
     -o-transition: 0.5s;
     transition: 0.5s;
-	margin-top: 16%;
+	margin-top: 17.5%;
+	width: 78.04%;
+	padding-bottom: 44.8%;
 	opacity: 1;	
 	background-image: url("../../Animation/WorldDamage/封面/Mosq1970.png");
+	-webkit-background-size: contain;
 
 }
 .DSCpart1.open:hover{
 	-webkit-filter:brightness(1);
-
 }
 .DSCpart1.close{
 	-webkit-transition: 0.5s;
@@ -2864,17 +2864,18 @@
     -ms-transition: 0.5s;
     -o-transition: 0.5s;
     transition: 0.5s;
-	margin-top: 8.5%;
+	margin-top: 22.5%;
+	width: 58.59%;
+	padding-bottom: 33.6%;
 	opacity: 1;	
 }
 
 .DSCpart1Title{
 	position: absolute;
 	z-index: 19;
-	margin-top: 17.5%;
-	margin-left: 10.42%;
-	font-size: 1.66rem;
-	width: 39.06%;
+	margin-top: 35.5%;
+	font-size: 3rem;
+	width: 58.59%;
 	background-color: #1E3239;
 	color: #fff;
 	display: flex;
@@ -2886,28 +2887,24 @@
     transition: 1s;
 	width: 100%;
 	margin-left: 0%;
-	font-size: 2.35rem;
-	margin-top: 4.5%;
+	font-size: 5rem;
+	margin-top: 5%;
 	color: #E98C24;
 	background-color: transparent;
-
 }
 
 .DSCpart1Title.close{
+	margin-top: 35.5%;
+	width: 58.59%;
     transition: 1s;
-	margin-top: 17.5%;
-	margin-left: 10.42%;
-	width: 39.06%;
 	background-color: #1E3239;
 }
-
 .DSCpart2{
 	position: absolute;
 	z-index: 17;
-	margin-top: 8.5%;
-	margin-left: 50.89%;
-	width: 39.06%;
-	padding-bottom: 22.4%;
+	margin-top: 60%;
+	width: 58.59%;
+	padding-bottom: 33.6%;
 	background-color: #0e262f;
 	border-radius: 2.67%;
 	color: #ffffff;
@@ -2917,11 +2914,11 @@
 	align-items: center;
 	justify-content: center;
 	-webkit-background-size: contain;
+
 }
 .DSCpart2:hover{
 	-webkit-filter:brightness(1.2);
 	background-image: url("../../Animation/WorldDamage/蚊子.gif");
-	
 
 }
 .DSCpart2.open{
@@ -2930,10 +2927,12 @@
     -ms-transition: 1s;
     -o-transition: 1s;
     transition: 1s;
-	margin-top: 16%;
-	margin-left: 10.42%;
+	margin-top: 17.5%;
+	width: 78.04%;
+	padding-bottom: 44.8%;
 	opacity: 1;
 	background-image: url("../../Animation/WorldDamage/蚊子.gif");
+	-webkit-background-size: contain;
 
 }
 .DSCpart2.open:hover{
@@ -2946,17 +2945,18 @@
     -ms-transition: 1s;
     -o-transition: 1s;
     transition: 1s;
-	margin-top: 8.5%;
+	margin-top: 60%;
+	width: 58.59%;
+	padding-bottom: 33.6%;
 	opacity: 1;	
 }
 
 .DSCpart2Title{
 	position: absolute;
 	z-index: 19;
-	margin-top: 17.5%;
-	margin-left: 50.89%;
-	font-size: 1.66rem;
-	width: 39.06%;
+	margin-top: 73.5%;
+	font-size: 3rem;
+	width: 58.59%;
 	background-color: #1E3239;
 	color: #fff;
 	display: flex;
@@ -2967,27 +2967,26 @@
     transition: 1s;
 	width: 100%;
 	margin-left: 0%;
-	font-size: 2.35rem;
-	margin-top: 4.5%;
+	font-size: 5rem;
+	margin-top: 5%;
 	color: #E98C24;
 	background-color: transparent;
 }
 
 .DSCpart2Title.close{
+	margin-top: 73.5%;
+	font-size: 3rem;
+	width: 58.59%;
     transition: 1s;
-	margin-top: 17.5%;
-	margin-left: 50.89%;
-	width: 39.06%;
 	background-color: #1E3239;
 }
 
 .DSCpart3{
 	position: absolute;
 	z-index: 17;
-	margin-top: 32.5%;
-	margin-left: 10.42%;
-	width: 39.06%;
-	padding-bottom: 22.4%;
+	margin-top: 97.5%;
+	width: 58.59%;
+	padding-bottom: 33.6%;
 	background-color: #0e262f;
 	border-radius: 2.67%;
 	color: #ffffff;
@@ -3001,7 +3000,6 @@
 .DSCpart3:hover{
 	-webkit-filter:brightness(1.2);
 	background-image: url("../../Animation/WorldDamage/急診.gif");
-
 }
 .DSCpart3.open{
 	-webkit-transition: 2s;
@@ -3009,9 +3007,12 @@
     -ms-transition: 2s;
     -o-transition: 2s;
     transition: 1s;
-	margin-top: 16%;
+	margin-top: 17.5%;
+	width: 78.04%;
+	padding-bottom: 44.8%;
 	opacity: 1;
 	background-image: url("../../Animation/WorldDamage/急診.gif");
+	-webkit-background-size: contain;
 
 }
 .DSCpart3.open:hover{
@@ -3025,17 +3026,16 @@
     -ms-transition: 0.5s;
     -o-transition: 0.5s;
     transition: 0.5s;
-	margin-top: 32.5%;
+	margin-top: 97.5%;
 	opacity: 1;	
 }
 
 .DSCpart3Title{
 	position: absolute;
 	z-index: 19;
-	margin-top: 41.5%;
-	margin-left: 10.42%;
-	font-size: 1.66rem;
-	width: 39.06%;
+	margin-top: 110.5%;
+	width: 58.59%;
+	font-size: 3rem;
 	background-color: #1E3239;
 	color: #fff;
 	display: flex;
@@ -3046,27 +3046,25 @@
    	transition: 1s;
 	width: 100%;
 	margin-left: 0%;
-	font-size: 2.35rem;
-	margin-top: 4.5%;
+	font-size: 4.8rem;
+	margin-top: 5%;
 	color: #E98C24;
 	background-color: transparent;
 }
 
 .DSCpart3Title.close{
 	transition: 1s;
-	margin-top: 41.5%;
-	margin-left: 10.42%;
-	width: 39.06%;
+	margin-top: 110.5%;
+	width: 58.59%;
 	background-color: #1E3239;
 }
 
 .DSCpart4{
 	position: absolute;
 	z-index: 17;
-	margin-top: 32.5%;
-	margin-left: 50.89%;
-	width: 39.06%;
-	padding-bottom: 22.4%;
+	margin-top: 135%;
+	width: 58.59%;
+	padding-bottom: 33.6%;
 	background-color: #0e262f;
 	border-radius: 2.67%;
 	color: #ffffff;
@@ -3090,10 +3088,12 @@
     -o-transition: 1s;
     transition: 1s;
 	margin-top: 16%;
-	margin-left: 10.42%;
+	width: 78.04%;
+	padding-bottom: 44.8%;
 	opacity: 1;	
 	background-image: url("../../Animation/WorldDamage/腎衰竭.gif");
-	
+	-webkit-background-size: contain;
+
 }
 .DSCpart4.open:hover{
 	-webkit-filter:brightness(1);
@@ -3105,17 +3105,18 @@
     -ms-transition: 1s;
     -o-transition: 1s;
     transition: 1s;
-	margin-top: 32.5%;
+	margin-top: 135%;
+	width: 58.59%;
+	padding-bottom: 33.6%;
 	opacity: 1;	
 }
 
 .DSCpart4Title{
 	position: absolute;
 	z-index: 19;
-	margin-top: 41.5%;
-	margin-left: 50.89%;
-	font-size: 1.66rem;
-	width: 39.06%;
+	margin-top: 148%;
+	font-size: 3rem;
+	width: 58.59%;
 	background-color: #1E3239;
 	color: #fff;
 	display: flex;
@@ -3126,20 +3127,18 @@
     transition: 1s;
 	width: 100%;
 	margin-left: 0%;
-	font-size: 2.35rem;
-	margin-top: 4.5%;
+	font-size: 5rem;
+	margin-top: 5%;
 	color: #E98C24;
 	background-color: transparent;
 }
 
 .DSCpart4Title.close{
 	transition: 1s;
-	margin-top: 41.5%;
-	margin-left: 50.89%;
-	width: 39.06%;
+	margin-top: 148%;
+	width: 58.59%;
 	background-color: #1E3239;
 }
-
 .DSCContent{
 	position: absolute;
 	z-index: -1;
@@ -3148,34 +3147,31 @@
 	width: 0%;
 	background-color: transparent;
 	color: transparent;
-	font-size: 2.2rem;
+	font-size: 4.5rem;
 	opacity: 0;
 	display: flex;
-	align-items: center;
-	justify-content: flex-end;
+	align-items: flex-start;
+	justify-content: center;
 }
-
 .DSCContent.open{
 	position: absolute;
 	margin-top: 0%;
 	margin-left: 0%;
 	width: 100%;
-	padding-bottom: 56%;
+	height: 100%;
 	background-color: #1E3239;
-	opacity: 0.95;
-	display: flex;
+	opacity: 0.99;
 	color: #ffffff;
 	
 }
 .DSCpart1Contenttext{
 	position: absolute;
-	margin-top: 54%;
-	margin-left: 55.21%;
-	width: 44.79%;
+	margin-top: 65%;
+	margin-left: 7.5%;
+	width: 85%;
 	background-color: transparent;
-	font-size: 2.2rem;
 	display: flex;
-	align-items: center;
+	align-items: flex-start;
 	justify-content: flex-start;
 	line-height: 1.8;
 	opacity: 0;
@@ -3187,11 +3183,10 @@
 
 .DSCpart2Contenttext{
 	position: absolute;
-	margin-top: 54%;
-	margin-left: 55.21%;
-	width: 44.79%;
+	margin-top: 65%;
+	margin-left: 7.5%;
+	width: 85%;
 	background-color: transparent;
-	font-size: 2rem;
 	display: flex;
 	align-items: center;
 	justify-content: flex-start;
@@ -3206,15 +3201,13 @@
 
 .DSCpart3Contenttext{
 	position: absolute;
-	margin-top: 54%;
-	margin-left: 55.21%;
-	width: 44.79%;
+	margin-top: 65%;
+	margin-left: 7.5%;
+	width: 85%;
 	background-color: transparent;
-	font-size: 2rem;
 	display: flex;
 	align-items: center;
 	justify-content: flex-start;
-	line-height: 2;
 	opacity: 0;
 }
 .DSCpart3Contenttext.open{
@@ -3224,15 +3217,15 @@
 
 .DSCpart4Contenttext{
 	position: absolute;
-	margin-top: 54%;
-	margin-left: 55.21%;
-	width: 44.79%;
+	margin-top: 65%;
+	margin-left: 7.5%;
+	width: 85%;
 	background-color: transparent;
-	font-size: 2.2rem;
 	display: flex;
 	align-items: center;
 	justify-content: flex-start;
-	opacity: 0; 
+	opacity: 0;
+	 
 }
 .DSCpart4Contenttext.open{
 	transition: 1s opacity  0.5s;
