--- a/網頁/AttackPage/AtackPagePart4.m.css
+++ b/網頁/AttackPage/AtackPagePart4.m.css
@@ -2753,6 +2753,8 @@
 	margin-left: -100%;
 	width: 100%;
 	height: 100%;
+	display: flex;
+	justify-content: center;
 }
 .DiseaseContent.open{
 	-webkit-transition: 2s;
@@ -2834,6 +2836,7 @@
 	align-items: center;
 	justify-content: center;
 	-webkit-background-size: contain;
+	
 }
 .DSCpart1:hover{
 	-webkit-filter:brightness(1.2);
