--- a/網頁/AttackPage/AtackPagePart4.m.css
+++ b/網頁/AttackPage/AtackPagePart4.m.css
@@ -3262,6 +3262,8 @@
 	margin-left: -100%;
 	width: 100%;
 	height: 100%;
+	display: flex;
+	justify-content: center;
 
 }
 .FoodShortageContent.open{
