--- a/網頁/AttackPage/AtackPagePart4.m.css
+++ b/網頁/AttackPage/AtackPagePart4.m.css
@@ -3769,8 +3769,10 @@
 	z-index: -2;
 	margin-top: -170.5%;
 	margin-left: -310%;
-	width: 309%;
-	padding-bottom: 172.5%;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	justify-content: center;
 
 }
 
