--- a/網頁/AttackPage/AtackPagePart4.m.css
+++ b/網頁/AttackPage/AtackPagePart4.m.css
@@ -3800,13 +3800,12 @@
 	z-index: 16;
 	margin-top: 0%;
 	margin-left: -100%;
-	width: 103%;
-	padding-bottom: 56%;
+	width: 100%;
+	height: 100%;
 	background-color: #163C4B;
 	opacity: 1;
 
 }
-
 .ESCBG.open{
 	-webkit-transition: 2s;
     -moz-transition: 2s;
@@ -3820,50 +3819,48 @@
 .ESCMain{
 	position: absolute;
 	z-index: 17;
-	margin-left: 4.17%;
-	margin-top: 2.5%;
+	margin-top: 4%;
 	color: #ffffff;
-	font-size: 3rem;
+	font-size: 6rem;
 	border: solid 3px #FFFFFF;
 	border-left: 0px;
 	border-right: 0px;
 	border-radius: 1px;
 	font-weight: normal;
 	line-height: 0;
-}
 
+
+}
 .ESCSub{
 	position: absolute;
 	z-index: 17;
-	margin-left: 32.55%;
-	margin-top: 3.13%;
+	margin-top: 14%;
 	color: #E98C24;
-	font-size: 2.2rem;
+	font-size: 3rem;
 	font-weight: normal;
+	line-height: 1.5;
 }
-
 .ESCpart1{
 	overflow: visible;
 	position: absolute;
 	z-index: 17;
-	margin-top: 8.5%;
-	margin-left: 10.42%;
-	width: 39.06%;
-	padding-bottom: 22.4%;
+	margin-top: 22.5%;
+	width: 58.59%;
+	padding-bottom: 33.6%;
 	background-color: #0e262f;
 	border-radius: 2.67%;
 	color: #ffffff;
 	font-size: 1.66rem;
-	background-image: url("../../Animation/WorldDamage/封面/Degree.png");
+	background-image: url("../../Animation/WorldDamage/封面/RiceHowmuch.png");
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	-webkit-background-size: contain;
+	
 }
-
 .ESCpart1:hover{
 	-webkit-filter:brightness(1.2);
-	background-image: url("../../Animation/WorldDamage/氣溫GDP.gif");
+	background-image: url("../../Animation/WorldDamage/溫度稻米產量.gif");
 
 }
 
@@ -3873,14 +3870,16 @@
     -ms-transition: 0.5s;
     -o-transition: 0.5s;
     transition: 0.5s;
-	margin-top: 16%;
+	margin-top: 17.5%;
+	width: 78.04%;
+	padding-bottom: 44.8%;
 	opacity: 1;	
-	background-image: url("../../Animation/WorldDamage/氣溫GDP.gif");
+	background-image: url("../../Animation/WorldDamage/溫度稻米產量.gif");
+	-webkit-background-size: contain;
 
 }
 .ESCpart1.open:hover{
 	-webkit-filter:brightness(1);
-
 }
 .ESCpart1.close{
 	-webkit-transition: 0.5s;
@@ -3888,17 +3887,18 @@
     -ms-transition: 0.5s;
     -o-transition: 0.5s;
     transition: 0.5s;
-	margin-top: 8.5%;
+	margin-top: 22.5%;
+	width: 58.59%;
+	padding-bottom: 33.6%;
 	opacity: 1;	
 }
 
 .ESCpart1Title{
 	position: absolute;
 	z-index: 19;
-	margin-top: 17.5%;
-	margin-left: 10.42%;
-	font-size: 1.66rem;
-	width: 39.06%;
+	margin-top: 35.5%;
+	font-size: 3rem;
+	width: 58.59%;
 	background-color: #1E3239;
 	color: #fff;
 	display: flex;
@@ -3909,56 +3909,55 @@
 .ESCpart1Title.open{
     transition: 1s;
 	width: 100%;
-	margin-left: -20%;
-	font-size: 2.35rem;
-	margin-top: 4.5%;
+	margin-left: 0%;
+	font-size: 5rem;
+	margin-top: 5%;
 	color: #E98C24;
 	background-color: transparent;
-
 }
 
 .ESCpart1Title.close{
+	margin-top: 35.5%;
+	width: 58.59%;
     transition: 1s;
-	margin-top: 17.5%;
 	background-color: #1E3239;
 }
-
 .ESCpart2{
 	position: absolute;
 	z-index: 17;
-	margin-top: 8.5%;
-	margin-left: 50.89%;
-	width: 39.06%;
-	padding-bottom: 22.4%;
+	margin-top: 60%;
+	width: 58.59%;
+	padding-bottom: 33.6%;
 	background-color: #0e262f;
 	border-radius: 2.67%;
 	color: #ffffff;
 	font-size: 1.66rem;
-	background-image: url("../../Animation/WorldDamage/封面/ManHeart.png");
+	background-image: url("../../Animation/WorldDamage/封面/RicePrice.png");
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	-webkit-background-size: contain;
+
 }
 .ESCpart2:hover{
 	-webkit-filter:brightness(1.2);
-	background-image: url("../../Animation/WorldDamage/男人心臟1.gif");
-	
-}
+	background-image: url("../../Animation/WorldDamage/稻米產量價格.gif");
 
+}
 .ESCpart2.open{
 	-webkit-transition: 1s;
     -moz-transition: 1s;
     -ms-transition: 1s;
     -o-transition: 1s;
     transition: 1s;
-	margin-top: 16%;
-	margin-left: 10.42%;
+	margin-top: 17.5%;
+	width: 78.04%;
+	padding-bottom: 44.8%;
 	opacity: 1;
-	background-image: url("../../Animation/WorldDamage/男人心臟1.gif");
+	background-image: url("../../Animation/WorldDamage/稻米產量價格.gif");
+	-webkit-background-size: contain;
 
 }
-
 .ESCpart2.open:hover{
 	-webkit-filter:brightness(1);
 
@@ -3969,89 +3968,62 @@
     -ms-transition: 1s;
     -o-transition: 1s;
     transition: 1s;
-	margin-top: 8.5%;
+	margin-top: 60%;
+	width: 58.59%;
+	padding-bottom: 33.6%;
 	opacity: 1;	
 }
 
 .ESCpart2Title{
 	position: absolute;
 	z-index: 19;
-	margin-top: 17.5%;
-	margin-left: 50.89%;
-	font-size: 1.66rem;
-	width: 39.06%;
+	margin-top: 73.5%;
+	font-size: 3rem;
+	width: 58.59%;
 	background-color: #1E3239;
 	color: #fff;
 	display: flex;
 	align-items: center;
 	justify-content: center;
 }
-
 .ESCpart2Title.open{
     transition: 1s;
 	width: 100%;
-	margin-left: -20%;
-	font-size: 2.35rem;
-	margin-top: 4.5%;
+	margin-left: 0%;
+	font-size: 5rem;
+	margin-top: 5%;
 	color: #E98C24;
 	background-color: transparent;
 }
 
 .ESCpart2Title.close{
+	margin-top: 73.5%;
+	font-size: 3rem;
+	width: 58.59%;
     transition: 1s;
-	margin-top: 17.5%;
 	background-color: #1E3239;
-}
-
-.ESCpart2Content{
-	position: absolute;
-	z-index: -1;
-	margin-top: 0%;
-	margin-left: 0%;
-	width: 0%;
-	background-color: transparent;
-	color: transparent;
-	font-size: 2.2rem;
-	display: flex;
-	align-items: center;
-	justify-content: flex-end;
-	opacity: 0;
-}
-
-.ESCpart2Content.open{
-	position: absolute;
-	margin-top: 0%;
-	margin-left: 0%;
-	width: 100%;
-	padding-bottom: 56%;
-	background-color: #1E3239;
-	opacity: 0.95;
-	display: flex;
-	color: #ffffff;
 }
 
 .ESCpart3{
 	position: absolute;
+
 	z-index: 17;
-	margin-top: 32.5%;
-	margin-left: 10.42%;
-	width: 39.06%;
-	padding-bottom: 22.4%;
+	margin-top: 97.5%;
+	width: 58.59%;
+	padding-bottom: 33.6%;
 	background-color: #0e262f;
 	border-radius: 2.67%;
 	color: #ffffff;
 	font-size: 1.66rem;
-	background-image: url("../../Animation/WorldDamage/封面/HotPress.png");
+	background-image: url("../../Animation/WorldDamage/封面/CornSoy.png");
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	-webkit-background-size: contain;
 }
-
 .ESCpart3:hover{
 	-webkit-filter:brightness(1.2);
-	background-image: url("../../Animation/WorldDamage/熱壓力症穀物價格.gif");
-
+	background-image: url("../../Animation/WorldDamage/玉米黃豆.gif");
 }
 .ESCpart3.open{
 	-webkit-transition: 2s;
@@ -4059,9 +4031,12 @@
     -ms-transition: 2s;
     -o-transition: 2s;
     transition: 1s;
-	margin-top: 16%;
+	margin-top: 17.5%;
+	width: 78.04%;
+	padding-bottom: 44.8%;
 	opacity: 1;
-	background-image: url("../../Animation/WorldDamage/熱壓力症穀物價格.gif");
+	background-image: url("../../Animation/WorldDamage/玉米黃豆.gif");
+	-webkit-background-size: contain;
 
 }
 .ESCpart3.open:hover{
@@ -4075,17 +4050,16 @@
     -ms-transition: 0.5s;
     -o-transition: 0.5s;
     transition: 0.5s;
-	margin-top: 32.5%;
+	margin-top: 97.5%;
 	opacity: 1;	
 }
 
 .ESCpart3Title{
 	position: absolute;
 	z-index: 19;
-	margin-top: 41.5%;
-	margin-left: 10.42%;
-	font-size: 1.66rem;
-	width: 39.06%;
+	margin-top: 110.5%;
+	width: 58.59%;
+	font-size: 3rem;
 	background-color: #1E3239;
 	color: #fff;
 	display: flex;
@@ -4096,39 +4070,38 @@
    	transition: 1s;
 	width: 100%;
 	margin-left: 0%;
-	font-size: 2.35rem;
-	margin-top: 4.5%;
+	font-size: 4.8rem;
+	margin-top: 5%;
 	color: #E98C24;
 	background-color: transparent;
 }
 
 .ESCpart3Title.close{
 	transition: 1s;
-	margin-top: 41.5%;
+	margin-top: 110.5%;
+	width: 58.59%;
 	background-color: #1E3239;
 }
 
 .ESCpart4{
 	position: absolute;
 	z-index: 17;
-	margin-top: 32.5%;
-	margin-left: 50.89%;
-	width: 39.06%;
-	padding-bottom: 22.4%;
+	margin-top: 135%;
+	width: 58.59%;
+	padding-bottom: 33.6%;
 	background-color: #0e262f;
 	border-radius: 2.67%;
 	color: #ffffff;
 	font-size: 1.66rem;
-	background-image: url("../../Animation/WorldDamage/封面/ThialandUSA.png");
+	background-image: url("../../Animation/WorldDamage/封面/CornCar_.png");
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	-webkit-background-size: contain;
 }
 .ESCpart4:hover{
-	
 	-webkit-filter:brightness(1.2);
-	background-image: url("../../Animation/WorldDamage/泰國美國.gif");
+	background-image: url("../../Animation/WorldDamage/車子玉米.gif");
 
 }
 
@@ -4139,10 +4112,12 @@
     -o-transition: 1s;
     transition: 1s;
 	margin-top: 16%;
-	margin-left: 10.42%;
+	width: 78.04%;
+	padding-bottom: 44.8%;
 	opacity: 1;	
-	background-image: url("../../Animation/WorldDamage/泰國美國.gif");
-	
+	background-image: url("../../Animation/WorldDamage/車子玉米.gif");
+	-webkit-background-size: contain;
+
 }
 .ESCpart4.open:hover{
 	-webkit-filter:brightness(1);
@@ -4154,17 +4129,18 @@
     -ms-transition: 1s;
     -o-transition: 1s;
     transition: 1s;
-	margin-top: 32.5%;
+	margin-top: 135%;
+	width: 58.59%;
+	padding-bottom: 33.6%;
 	opacity: 1;	
 }
 
 .ESCpart4Title{
 	position: absolute;
 	z-index: 19;
-	margin-top: 41.5%;
-	margin-left: 50.89%;
-	font-size: 1.66rem;
-	width: 39.06%;
+	margin-top: 148%;
+	font-size: 3rem;
+	width: 58.59%;
 	background-color: #1E3239;
 	color: #fff;
 	display: flex;
@@ -4175,18 +4151,18 @@
     transition: 1s;
 	width: 100%;
 	margin-left: 0%;
-	font-size: 2.35rem;
-	margin-top: 4.5%;
+	font-size: 5rem;
+	margin-top: 5%;
 	color: #E98C24;
 	background-color: transparent;
 }
 
 .ESCpart4Title.close{
 	transition: 1s;
-	margin-top: 41.5%;
+	margin-top: 148%;
+	width: 58.59%;
 	background-color: #1E3239;
 }
-
 .ESCContent{
 	position: absolute;
 	z-index: -1;
@@ -4195,52 +4171,52 @@
 	width: 0%;
 	background-color: transparent;
 	color: transparent;
-	font-size: 2.2rem;
+	font-size: 4.5rem;
 	opacity: 0;
 	display: flex;
-	align-items: center;
-	justify-content: flex-end;
+	align-items: flex-start;
+	justify-content: center;
 }
 .ESCContent.open{
 	position: absolute;
 	margin-top: 0%;
 	margin-left: 0%;
 	width: 100%;
-	padding-bottom: 56%;
+	height: 100%;
 	background-color: #1E3239;
-	opacity: 0.95;
-	display: flex;
+	opacity: 0.99;
 	color: #ffffff;
 	
 }
-
 .ESCpart1Contenttext{
 	position: absolute;
-	margin-top: 54%;
-	margin-left: 55.21%;
-	width: 44.79%;
+	margin-top: 65%;
+	margin-left: 7.5%;
+	width: 85%;
 	background-color: transparent;
-	font-size: 2rem;
 	display: flex;
-	align-items: center;
+	align-items: flex-start;
 	justify-content: flex-start;
-	line-height: 2.1;
+	line-height: 1.8;
+	opacity: 0;
 }
 .ESCpart1Contenttext.open{
 	transition: 1s opacity  0.5s;
 	opacity: 1;
 }
+
 .ESCpart2Contenttext{
 	position: absolute;
-	margin-top: 54%;
-	margin-left: 55.21%;
-	width: 44.79%;
+	margin-top: 65%;
+	margin-left: 7.5%;
+	width: 85%;
 	background-color: transparent;
-	font-size: 2rem;
 	display: flex;
 	align-items: center;
+
 	justify-content: flex-start;
 	line-height: 2;
+	opacity: 0;
 	
 }
 .ESCpart2Contenttext.open{
@@ -4250,15 +4226,14 @@
 
 .ESCpart3Contenttext{
 	position: absolute;
-	margin-top: 54%;
-	margin-left: 55.21%;
-	width: 44.79%;
+	margin-top: 65%;
+	margin-left: 7.5%;
+	width: 85%;
 	background-color: transparent;
-	font-size: 2rem;
 	display: flex;
 	align-items: center;
 	justify-content: flex-start;
-	line-height: 2;
+	opacity: 0;
 }
 .ESCpart3Contenttext.open{
 	transition: 1s opacity  0.5s;
@@ -4267,22 +4242,20 @@
 
 .ESCpart4Contenttext{
 	position: absolute;
-	margin-top: 54%;
-	margin-left: 55.21%;
-	width: 44.79%;
+	margin-top: 65%;
+	margin-left: 7.5%;
+	width: 85%;
 	background-color: transparent;
-	font-size: 2.2rem;
 	display: flex;
 	align-items: center;
 	justify-content: flex-start;
+	opacity: 0;
 	 
 }
 .ESCpart4Contenttext.open{
 	transition: 1s opacity  0.5s;
 	opacity: 1;
 }
-
-
 
 
 
