--- a/網頁/AttackPage/AtackPagePart4.m.css
+++ b/網頁/AttackPage/AtackPagePart4.m.css
@@ -1734,9 +1734,11 @@
 	position: absolute;
 	z-index: -2;
 	margin-top: -77.75%;
-	margin-left: -310%;
-	width: 309%;
-	padding-bottom: 172.5%;
+	margin-left: -100%;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	justify-content: center;
 
 }
 .FireForestContent.open{
@@ -1754,7 +1756,7 @@
     -ms-transition: 2s;
     -o-transition: 2s;
     transition: 0.01s,opacity 1s;
-    margin-left: -310%;
+    margin-left: -100%;
 	opacity: 0;
 }
 
@@ -1764,12 +1766,9 @@
 	margin-top: 0%;
 	margin-left: -100%;
 	width: 100%;
-	padding-bottom: 13.5%;
+	height: 100%;
 	background-color: #163C4B;
 	opacity: 1;
-	display: flex;
-	align-items: center;
-	justify-content: flex-end;
 
 }
 .FFCBG.open{
@@ -1782,8 +1781,8 @@
 	margin-left: 0%;
 }
 .WorldMap{
-	width: 55.2%;
-	margin-top: 15%;
+	width: 90%;
+	margin-top: 22.5%;
 }
 .FFCMain{
 	position: absolute;
