--- a/網頁/AttackPage/AtackPagePart4.m.css
+++ b/網頁/AttackPage/AtackPagePart4.m.css
@@ -1789,10 +1789,9 @@
 .FFCMain{
 	position: absolute;
 	z-index: 17;
-	margin-left: 4.17%;
-	margin-top: 2.5%;
+	margin-top: 4%;
 	color: #ffffff;
-	font-size: 3rem;
+	font-size: 6rem;
 	border: solid 3px #FFFFFF;
 	border-left: 0px;
 	border-right: 0px;
@@ -2110,16 +2109,11 @@
 .HWCMain{
 	position: absolute;
 	z-index: 17;
-	margin-left: 4.17%;
-	margin-top: 2.5%;
-	color: #ffffff;
+	margin-top: 14%;
+	color: #E98C24;
 	font-size: 3rem;
-	border: solid 3px #FFFFFF;
-	border-left: 0px;
-	border-right: 0px;
-	border-radius: 1px;
 	font-weight: normal;
-	line-height: 0;
+	line-height: 1.5;
 }
 .HWCSub{
 	position: absolute;
