--- a/網頁/AttackPage/AtackPagePart4.m.css
+++ b/網頁/AttackPage/AtackPagePart4.m.css
@@ -1930,16 +1930,17 @@
 
 .FFCContenttext{
 	position: absolute;
-	z-index: 16;
+	z-index: -1;
 	margin-top: 0%;
 	margin-left: 0%;
-	width: 41.67%;
-	padding-bottom: 56%;
+	width: 0%;
 	background-color: transparent;
 	color: transparent;
-	font-size: 2.2rem;
-	opacity: 1;
+	font-size: 4.5rem;
+	opacity: 0;
 	display: flex;
+	align-items: flex-start;
+	justify-content: center;
 	visibility: hidden;
 	
 	
@@ -1951,16 +1952,14 @@
 
 .FFCAmazonContenttext{
 	position: absolute;
-	margin-top: 0%;
-	margin-left: 12.5%;
-	width: 100%;
-	height: 100%;
+	margin-top: 65%;
+	margin-left: 7.5%;
+	width: 85%;
 	background-color: transparent;
-	font-size: 2.2rem;
 	display: flex;
 	align-items: center;
-	color: #ffffff;
-	line-height: 2;
+	justify-content: flex-start;
+	line-height: 1.8;
 	opacity: 0;
 
 }
@@ -1972,16 +1971,14 @@
 
 .FFCNAEUJPContenttext{
 	position: absolute;
-	margin-top: 0%;
-	margin-left: 12.5%;
-	width: 100%;
-	height: 100%;
+	margin-top: 65%;
+	margin-left: 7.5%;
+	width: 85%;
 	background-color: transparent;
-	font-size: 2.2rem;
 	display: flex;
 	align-items: center;
-	color: #ffffff;
-	line-height: 2;
+	justify-content: flex-start;
+	line-height: 1.8;
 	opacity: 0;
 	 
 }
@@ -1992,16 +1989,14 @@
 
 .FFCSBLContenttext{
 	position: absolute;
-	margin-top: 0%;
-	margin-left: 12.5%;
-	width: 100%;
-	height: 100%;
+	margin-top: 65%;
+	margin-left: 7.5%;
+	width: 85%;
 	background-color: transparent;
-	font-size: 2.2rem;
 	display: flex;
 	align-items: center;
-	color: #ffffff;
-	line-height: 2;
+	justify-content: flex-start;
+	line-height: 1.8;
 	opacity: 0;
 
 }
@@ -2012,16 +2007,14 @@
 
 .FFCAUSContenttext{
 	position: absolute;
-	margin-top: 0%;
-	margin-left: 12.5%;
-	width: 100%;
-	height: 100%;
+	margin-top: 65%;
+	margin-left: 7.5%;
+	width: 85%;
 	background-color: transparent;
-	font-size: 2.2rem;
 	display: flex;
 	align-items: center;
-	color: #ffffff;
-	line-height: 2;
+	justify-content: flex-start;
+	line-height: 1.8;
 	opacity: 0;
 	 
 }
@@ -2032,16 +2025,14 @@
 
 .FFCIconContenttext{
 	position: absolute;
-	margin-top: 0%;
-	margin-left: 12.5%;
-	width: 100%;
-	height: 100%;
+	margin-top: 65%;
+	margin-left: 7.5%;
+	width: 85%;
 	background-color: transparent;
-	font-size: 2.2rem;
 	display: flex;
 	align-items: center;
-	color: #ffffff;
-	line-height: 2;
+	justify-content: flex-start;
+	line-height: 1.8;
 	opacity: 0;
 	 
 }
