--- a/網頁/AttackPage/AtackPagePart4.m.css
+++ b/網頁/AttackPage/AtackPagePart4.m.css
@@ -1930,17 +1930,20 @@
 
 .FFCContenttext{
 	position: absolute;
-	z-index: -1;
+	z-index: 16;
+	
 	margin-top: 0%;
 	margin-left: 0%;
-	width: 0%;
+	width:100%;
+	height: 100%;
 	background-color: transparent;
 	color: transparent;
 	font-size: 4.5rem;
-	opacity: 0;
+	opacity: 1;
 	display: flex;
 	align-items: flex-start;
 	justify-content: center;
+	visibility: hidden;
 	
 }
 
