--- a/網頁/AttackPage/AtackPagePart4.m.css
+++ b/網頁/AttackPage/AtackPagePart4.m.css
@@ -1937,7 +1937,7 @@
 	width:100%;
 	height: 100%;
 	background-color: transparent;
-	color: transparent;
+	color: #ffffff;
 	font-size: 4.5rem;
 	opacity: 1;
 	display: flex;
