--- a/網頁/AttackPage/AtackPagePart4.m.css
+++ b/網頁/AttackPage/AtackPagePart4.m.css
@@ -1890,7 +1890,7 @@
 	margin-left: 62%;
 	width: 10.12%;
 	font-size: 2.2rem;
-	opacity: 1;
+	opacity: 0;
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -2061,9 +2061,9 @@
 	position: absolute;
 	z-index: -2;
 	margin-top: -97%;
-	margin-left: -310%;
-	width: 309%;
-	padding-bottom: 172.5%;
+	margin-left: -100%;
+	width: 100%;
+	height: 100%;
 }
 
 .HeatWaveContent.open{
@@ -2082,12 +2082,11 @@
 	margin-top: 0%;
 	margin-left: -100%;
 	width: 100%;
-	padding-bottom: 13.5%;
+	height: 100%;
 	background-color: #163C4B;
 	opacity: 1;
 	display: flex;
-	align-items: center;
-	justify-content: flex-end;
+	justify-content: center;
 
 }
 .HWCBG.open{
