--- a/網頁/AttackPage/AtackPagePart4.m.css
+++ b/網頁/AttackPage/AtackPagePart4.m.css
@@ -2125,8 +2125,8 @@
 .HWCWEU{
 	position: absolute;
 	z-index: 17;
-	margin-top: 42.5%;
-	margin-left: -69.6%;
+	margin-top: 42.6%;
+	margin-left: -69.7%;
 	width: 11.64%;
 	height: auto;
 	opacity: 1;
@@ -2172,8 +2172,8 @@
 .HWCSWE{
 	position: absolute;
 	z-index: 19;
-	margin-top: 32.8%;
-	margin-left: -58.8%;
+	margin-top: 33;
+	margin-left: -58.7%;
 	width: 5.37%;
 	height: auto;
 	background-color: transparent;
