--- a/網頁/AttackPage/AtackPagePart4.m.css
+++ b/網頁/AttackPage/AtackPagePart4.m.css
@@ -2172,7 +2172,7 @@
 .HWCSWE{
 	position: absolute;
 	z-index: 19;
-	margin-top: 33;
+	margin-top: 33%;
 	margin-left: -58.7%;
 	width: 5.37%;
 	height: auto;
