--- a/網頁/AttackPage/AtackPagePart4.m.css
+++ b/網頁/AttackPage/AtackPagePart4.m.css
@@ -2354,10 +2354,12 @@
 .ExtremeClimateContent{
 	position: absolute;
 	z-index: -2;
-	margin-top: -116.25%;
-	margin-left: -310%;
-	width: 309%;
-	padding-bottom: 172.5%;
+	margin-top: -97%;
+	margin-left: -100%;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	justify-content: center;
 }
 .ExtremeClimateContent.open{
 	-webkit-transition: 2s;
@@ -2375,12 +2377,11 @@
 	margin-top: 0%;
 	margin-left: -100%;
 	width: 100%;
-	padding-bottom: 13.5%;
+	height: 100%;
 	background-color: #163C4B;
 	opacity: 1;
 	display: flex;
-	align-items: center;
-	justify-content: flex-end;
+	justify-content: center;
 }
 
 .ECCBG.open{
@@ -2395,10 +2396,9 @@
 .ECCMain{
 	position: absolute;
 	z-index: 17;
-	margin-left: 4.17%;
-	margin-top: 2.5%;
+	margin-top: 4%;
 	color: #ffffff;
-	font-size: 3rem;
+	font-size: 6rem;
 	border: solid 3px #FFFFFF;
 	border-left: 0px;
 	border-right: 0px;
@@ -2409,11 +2409,11 @@
 .ECCSub{
 	position: absolute;
 	z-index: 17;
-	margin-left: 32.55%;
-	margin-top: 3.13%;
+	margin-top: 14%;
 	color: #E98C24;
-	font-size: 2.2rem;
+	font-size: 3rem;
 	font-weight: normal;
+	line-height: 1.5;
 }
 .ECCContenttext{
 	position: absolute;
