--- a/網頁/AttackPage/AtackPagePart4.m.css
+++ b/網頁/AttackPage/AtackPagePart4.m.css
@@ -2126,7 +2126,7 @@
 	position: absolute;
 	z-index: 17;
 	margin-top: 42.7%;
-	margin-left: -69.75%;
+	margin-left: -69.8%;
 	width: 11.64%;
 	height: auto;
 	opacity: 1;
@@ -2150,7 +2150,7 @@
 	position: absolute;
 	z-index: 18;
 	margin-top: 40.5%;
-	margin-left: -73.35%;
+	margin-left: -73.3%;
 	width: 5.45%;
 	height: auto;
 	opacity: 1;
@@ -2172,7 +2172,7 @@
 .HWCSWE{
 	position: absolute;
 	z-index: 19;
-	margin-top: 33.5%;
+	margin-top: 33%;
 	margin-left: -58.7%;
 	width: 5.37%;
 	height: auto;
@@ -2201,7 +2201,7 @@
 	position: absolute;
 	z-index: 17;
 	margin-top: 48.2%;
-	margin-left: 46.6%;
+	margin-left: 44.6%;
 	width: 7%;
 	height: auto;
 	background-color: transparent;
@@ -2420,14 +2420,16 @@
 	z-index: 16;
 	margin-top: 0%;
 	margin-left: 0%;
-	width: 41.67%;
-	padding-bottom: 56%;
+	width:100%;
+	height: 100%;
 	background-color: transparent;
-	color: transparent;
-	font-size: 2.2rem;
+	color: #ffffff;
+	font-size: 4.5rem;
 	opacity: 1;
 	display: flex;
-	visibility: hidden;	
+	align-items: flex-start;
+	justify-content: center;
+	visibility: hidden;
 	
 }
 .ECCContenttext.open{
@@ -2437,19 +2439,17 @@
 
 .ECCintroduction{
 	position: absolute;
-	margin-top: 0%;
-	margin-left: 12.5%;
-	width: 100%;
-	height: 100%;
+	margin-top: 80%;
+	margin-left: 7.5%;
+	width: 85%;
 	background-color: transparent;
-	font-size: 2.2rem;
 	display: flex;
 	align-items: center;
-	color: #ffffff;
-	line-height: 2;
+	justify-content: flex-start;
+	line-height: 1.8;
 	opacity: 0;
 	visibility: hidden;
-	transition: 1s ;
+	transition: 1s;
 }
 .ECCintroduction.open{
 	opacity: 1;
@@ -2477,16 +2477,14 @@
 
 .ECCIconContenttext{
 	position: absolute;
-	margin-top: 0%;
-	margin-left: 12.5%;
-	width: 100%;
-	height: 100%;
+	margin-top: 80%;
+	margin-left: 7.5%;
+	width: 85%;
 	background-color: transparent;
-	font-size: 2.2rem;
 	display: flex;
 	align-items: center;
-	color: #ffffff;
-	line-height: 2;
+	justify-content: flex-start;
+	line-height: 1.8;
 	opacity: 0;
 	visibility: hidden;
 	 
@@ -2498,16 +2496,14 @@
 }
 .ECCJPContenttext{
 	position: absolute;
-	margin-top: 0%;
-	margin-left: 12.5%;
-	width: 100%;
-	height: 100%;
+	margin-top: 80%;
+	margin-left: 7.5%;
+	width: 85%;
 	background-color: transparent;
-	font-size: 2.2rem;
 	display: flex;
 	align-items: center;
-	color: #ffffff;
-	line-height: 2;
+	justify-content: flex-start;
+	line-height: 1.8;
 	opacity: 0;
 	visibility: hidden;
 	 
@@ -2564,16 +2560,14 @@
 
 .ECCCNContenttext{
 	position: absolute;
-	margin-top: 0%;
-	margin-left: 12.5%;
-	width: 100%;
-	height: 100%;
+	margin-top: 80%;
+	margin-left: 7.5%;
+	width: 85%;
 	background-color: transparent;
-	font-size: 2.2rem;
 	display: flex;
 	align-items: center;
-	color: #ffffff;
-	line-height: 2;
+	justify-content: flex-start;
+	line-height: 1.8;
 	opacity: 0;
 	visibility: hidden;
 	 
@@ -2609,16 +2603,14 @@
 
 .ECCAUSContenttext{
 	position: absolute;
-	margin-top: 0%;
-	margin-left: 12.5%;
-	width: 100%;
-	height: 100%;
+	margin-top: 80%;
+	margin-left: 7.5%;
+	width: 85%;
 	background-color: transparent;
-	font-size: 2.2rem;
 	display: flex;
 	align-items: center;
-	color: #ffffff;
-	line-height: 2;
+	justify-content: flex-start;
+	line-height: 1.8;
 	opacity: 0;
 	visibility: hidden;
 	 
@@ -2653,16 +2645,14 @@
 
 .ECCTWContenttext{
 	position: absolute;
-	margin-top: 0%;
-	margin-left: 12.5%;
-	width: 100%;
-	height: 100%;
+	margin-top: 80%;
+	margin-left: 7.5%;
+	width: 85%;
 	background-color: transparent;
-	font-size: 2.2rem;
 	display: flex;
 	align-items: center;
-	color: #ffffff;
-	line-height: 2;
+	justify-content: flex-start;
+	line-height: 1.8;
 	opacity: 0;
 	visibility: hidden;
 	 
@@ -2704,16 +2694,14 @@
 
 .ECCUSAContenttext{
 	position: absolute;
-	margin-top: 0%;
-	margin-left: 12.5%;
-	width: 100%;
-	height: 100%;
+	margin-top: 80%;
+	margin-left: 7.5%;
+	width: 85%;
 	background-color: transparent;
-	font-size: 2.2rem;
 	display: flex;
 	align-items: center;
-	color: #ffffff;
-	line-height: 2;
+	justify-content: flex-start;
+	line-height: 1.8;
 	opacity: 0;
 	visibility: hidden;
 	 
