--- a/網頁/AttackPage/AtackPagePart5.m.css
+++ b/網頁/AttackPage/AtackPagePart5.m.css
@@ -43,7 +43,7 @@
 	padding-bottom: 40%;
 	display: flex;
 	align-items: center;
-	justify-content: center;
+	justify-content: flex-start;
 	text-align: center;
 	color: #ACD3D2;
 }
