--- a/網頁/AttackPage/AtackPagePart5.m.css
+++ b/網頁/AttackPage/AtackPagePart5.m.css
@@ -42,8 +42,8 @@
 	width: 33.3%;
 	padding-bottom: 40%;
 	display: flex;
-	align-items: center;
-	justify-content: flex-start;
+	align-items: flex-start;
+	justify-content: center;
 	text-align: center;
 	color: #ACD3D2;
 }
@@ -74,7 +74,7 @@
 	width: 33.3%;
 	padding-bottom: 40%;
 	display: flex;
-	align-items: center;
+	align-items: flex-start;
 	justify-content: center;
 	text-align: center;
 	color: #ACD3D2;
@@ -106,7 +106,7 @@
 	width: 33.3%;
 	padding-bottom: 40%;
 	display: flex;
-	align-items: center;
+	align-items: flex-start;
 	justify-content: center;
 	text-align: center;
 	color: #ACD3D2;
