--- a/HomePage.css
+++ b/HomePage.css
@@ -568,6 +568,19 @@ h3,p{
 	.Ab{
 		font-size: 16rem;
 	}
+	.l-earth{
+		position: absolute;
+		top: 40%;
+		width: 20%;
+		}
+	.l-word {
+		position: absolute;
+		top: 55%;
+		font-size: 28px;
+		letter-spacing: 12px;
+		text-align: center;
+
+	}
 }
 
 @media (min-device-width: 100px) and (max-device-width: 375px){
@@ -645,5 +658,18 @@ h3,p{
 	}
 	.Ab{
 		font-size: 16rem;
+	}
+	.l-earth{
+		position: absolute;
+		top: 40%;
+		width: 20%;
+		}
+	.l-word {
+		position: absolute;
+		top: 55%;
+		font-size: 28px;
+		letter-spacing: 12px;
+		text-align: center;
+
 	}
 }
