--- a/網頁/ConvertPage/ConvertPageAll.css
+++ b/網頁/ConvertPage/ConvertPageAll.css
@@ -331,7 +331,7 @@ button{
 .fog-container {
   	position: absolute;
   	width: 100%;
-	padding-bottom: 56%;
+	height: 100%;
 	overflow: hidden;
   	z-index: 3;
 
